2000-10-20  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/BounceParser.pm (parse_exchange): Parse a variant of the
        exchange format.

2000-10-19  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Config.pm (_defaults): When an eval of the defaults
	string fails, print it out.

	* t/core.t: Clean up a bit.

	* t/shell.t: Set some variables to allow non-internet-connected
	hosts to run the tests.

	* lib/Mj/List.pm (remove): Mode "pattern" is valid for
	unsubscribe, but "regex" needs to be passed to the database
	routines.

2000-10-18  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm (_who):  Display aliasing commands
	in "alias" mode for the GLOBAL list.  Display register
	commands with passwords with the "who-export GLOBAL"
	command.  Add sublist support to "export" mode.

2000-10-15  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (auxadd, auxremove, auxwho) Merge
	auxiliary list commands with their common counterparts,
	subscribe, unsubscribe, and who.
	(rekey)  Rekeying automatically verifies the contents
	of the subscriber lists and registry.  Using "repair"
	mode will cause both to be repaired.
	(who)  Add preliminary support for "alias" mode, which
	will display the contents of the aliases database.
	(_make_list)  Use the stored values for the installation
	defaults from the DEFAULT list to avoid reloading them
	for every list.
	(dispatch)  Separate list:sublist into separate request hash
	variables.
        (config_get_vars)  All settings of the DEFAULT list are visible.
	(valid_list)  Understand and untaint list:sublist combination.

	* lib/Mj/Access.pm: (list_access_check)  Use GLOBAL checks 
	for the DEFAULT list.
	(_a_default)  "deny" by default if a sublist other than 'MAIN' is used.

	* lib/Mj/Config.pm:  (parse_address, parse_pw)  Allow
	$LIST substitution to avoid having to reload the installation
	defaults for each mailing list.
	(load) Rearrange the data structures for storing configuration
	information.
