@@ -1,0 +1,2 @@
+DSN + diag extraction
+user1@example.com	failure	Users mailbox is currently disabled
