@@ -1,0 +1,28 @@
+Comment: This is a Compuserve bounce
+Message-Id: <200008211621.MAA20904@sphmgaaa.compuserve.com>
+From: CompuServe Postmaster <postmaster@compuserve.com>
+Subject: Undeliverable Message
+Sender: CompuServe Postmaster <auto.reply@compuserve.com>
+To: test-owner+M3@example.com
+
+Receiver not found: user1
+
+
+Your message could not be delivered as addressed.
+
+--- Message From Postmaster ---
+
+Subject: Addressing CompuServe Mail users
+
+Please contact postmaster@compuserve.com if you need additional formatting
+information for other types of addresses.
+
+Cordially,
+
+The Electronic Postmaster
+
+--- Returned Message ---
+
+Header: header
+
+Message
