@@ -1,0 +1,2 @@
+Compuserve
+user1@compuserve.com	failure	Receiver not found
